// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InfobarCustomerInfo/> should render basic customer info and empty widgets because customer data are loaded, the user is currently editing widgets and it is dragging a widget -- even though widgets are currently empty 1`] = `
<div
  class="d-flex flex-column"
  data-candu-id="infobar-widgets-list-edition"
>
  <div
    class="customerInfo"
  >
    <div
      class="customerProfile"
    >
      <div
        class="component square mr-3 rounded"
        style="width: 36px; height: 36px;"
      >
        <div
          class="initials"
          style="width: 36px; height: 36px; font-size: 15px;"
        >
          <span
            style="line-height: 38px;"
          >
            f
          </span>
        </div>
      </div>
      <div
        class="customerLink"
      >
        <a
          class="displayName"
          to="/app/customer/1"
        >
          foo
        </a>
      </div>
    </div>
    <div>
      CustomerFields
    </div>
    <div
      class="ui-separator-separator-f4da separator"
      data-direction="horizontal"
      data-variant="solid"
      role="separator"
    />
    <div>
      CustomerChannels
    </div>
    <div>
      LegacyCustomerTimelineButton
    </div>
  </div>
  <div>
    InfobarWidgets
  </div>
</div>
`;

exports[`<InfobarCustomerInfo/> sources render basic customer info and widgets because there is customer data, the user is not editing widgets and current widgets are not empty 1`] = `
<div
  class="d-flex flex-column"
  data-candu-id="infobar-widgets-list-view"
>
  <div
    class="customerInfo"
  >
    <div
      class="customerProfile"
    >
      <div
        class="component square mr-3 rounded"
        style="width: 36px; height: 36px;"
      >
        <div
          class="initials"
          style="width: 36px; height: 36px; font-size: 15px;"
        >
          <span
            style="line-height: 38px;"
          >
            f
          </span>
        </div>
      </div>
      <div
        class="customerLink"
      >
        <a
          class="displayName"
          to="/app/customer/1"
        >
          foo
        </a>
      </div>
    </div>
    <div>
      CustomerFields
    </div>
    <div
      class="ui-separator-separator-f4da separator"
      data-direction="horizontal"
      data-variant="solid"
      role="separator"
    />
    <div>
      CustomerChannels
    </div>
    <div>
      LegacyCustomerTimelineButton
    </div>
  </div>
  <div>
    InfobarWidgets
  </div>
</div>
`;
